from old computer

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -58,10 +58,10 @@ strong {
 dfn {
   font-style: italic;
 }
-h1 {
+/* h1 {
   font-size: 2em;
   margin: .67em 0;
-}
+} */
 mark {
   background-color: #ff0;
   color: #000;
@@ -198,7 +198,6 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -232,7 +231,7 @@ h1 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
+  /* font-size: 2.25rem; */
   line-height: 1.1;
 }
 h2 {
@@ -249,7 +248,7 @@ h2 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.62671rem;
+  /* font-size: 1.62671rem; */
   line-height: 1.1;
 }
 h3 {
@@ -260,7 +259,7 @@ h3 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  /* margin-bottom: 1.45rem; */
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -283,7 +282,7 @@ h4 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   line-height: 1.1;
 }
 h5 {
@@ -300,7 +299,7 @@ h5 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 0.85028rem;
+  /* font-size: 0.85028rem; */
   line-height: 1.1;
 }
 h6 {
@@ -317,7 +316,7 @@ h6 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 0.78405rem;
+  /* font-size: 0.78405rem; */
   line-height: 1.1;
 }
 hgroup {
@@ -654,4 +653,17 @@ pre tt:after {
 
 ul{
   font-weight: 300;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: rgba(0,0,0,1) !important;
+}
+
+progress{
+  top: -9px !important;
+}
+
+body{
+  font-size: .9rem !important;
+  line-height: 2em !important;
 }
