--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Serif:wght@700&display=swap');
 html {
-  font-family: sans-serif;
+  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Serif', serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
